--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="card shadow-sm p-4">
                 <h2 class="text-center mb-4">Login</h2>
-                <form action="#" method="POST">
+                <form id="loginForm" onsubmit="return loginUser()" method="POST">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email" name="email" required>
@@ -27,5 +27,7 @@
             </div>
         </div>
     </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
