--- a/404.html
+++ b/404.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>خطأ 404 - الصفحة غير موجودة</title>
+    <title>404 - Page Not Found</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">YourService</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<header>
-    <h1>خطأ 404 - الصفحة غير موجودة</h1>
-</header>
+    <!-- Error Content -->
+    <section class="container mt-4 text-center">
+        <h1>Oops! Page Not Found.</h1>
+        <p>Sorry, the page you are looking for does not exist. Please check the URL or return to the <a href="index.html">home page</a>.</p>
+    </section>
 
-<section id="error-message">
-    <p>عذراً، الصفحة التي تبحث عنها غير موجودة.</p>
-    <p>قد تكون قد أدخلت عنوان URL غير صحيح أو أن الصفحة قد تم حذفها.</p>
-    <a href="index.html">العودة إلى الصفحة الرئيسية</a>
-</section>
-
-<footer>
-    <p>&copy; 2024 جميع الحقوق محفوظة</p>
-</footer>
-
+    <script>
+        // Optionally, add functionality to redirect back to the home page after a certain time
+        setTimeout(function() {
+            window.location.href = 'index.html';
+        }, 5000); // Redirect after 5 seconds
+    </script>
 </body>
 </html>
