--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | YourService</title>
+    <title>404 - Page Not Found</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,57 +20,40 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="service-request.html">Service Request</a></li>
-                    <li class="nav-item"><a class="nav-link" href="partners.html">Partners</a></li>
-                    <li class="nav-item"><a class="nav-link" href="location.html">Location</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
-                    <li class="nav-item"><a class="nav-link" href="edit-profile.html">Edit Profile</a></li>
-                    <li class="nav-item"><a class="nav-link" href="terms.html">Terms</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html" id="logout">Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <section class="container mt-4">
-        <h1>Welcome to Your Dashboard</h1>
-        <p>Use the navigation bar above to explore the site.</p>
-    </section>
+    <!-- Login Form (Initially Visible) -->
+    <div class="container mt-4" id="loginForm">
+        <h2>Login</h2>
+        <form id="loginFormContent">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
 
-    <!-- Scroll to Top Button -->
-    <button class="scroll-to-top">↑</button>
+    <!-- Main Content (Initially Hidden) -->
+    <div class="container mt-4" id="mainContent" style="display: none;">
+        <h1>Welcome to Your Service</h1>
+        <p>Now that you're logged in, you can access other pages:</p>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
 
-    <script>
-        // Check if user is logged in
-        if (localStorage.getItem('userLoggedIn') !== 'true') {
-            alert('You must log in first!');
-            window.location.href = 'login.html';
-        }
-
-        // Logout functionality
-        document.getElementById('logout').addEventListener('click', function() {
-            localStorage.removeItem('userLoggedIn');
-            alert('Logged out successfully!');
-            window.location.href = 'login.html';
-        });
-
-        // Scroll to Top functionality
-        let scrollToTopBtn = document.querySelector('.scroll-to-top');
-        window.onscroll = function() {
-            if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
-                scrollToTopBtn.style.display = 'block';
-            } else {
-                scrollToTopBtn.style.display = 'none';
-            }
-        };
-
-        scrollToTopBtn.onclick = function() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
