--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
     <h2>معلومات حسابك</h2>
     <p>البريد الإلكتروني: <span id="user-email">[البريد الإلكتروني]</span></p>
     <p>رقم الهاتف: <span id="user-phone">[رقم الهاتف]</span></p>
-    <p><a href="edit-profile.html">تعديل الملف الشخصي</a></p>
+    <p><a href="login.html" data-protected="edit-profile.html">تعديل الملف الشخصي</a></p>
 </section>
 
 <footer>
