--- a/index.html
+++ b/index.html
@@ -1,74 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Your Service Platform</title>
-    <!-- إضافة Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="description" content="Welcome to our website, offering a wide range of services for craftsmen, partners, and more.">
+    <meta name="keywords" content="craftsmen, services, partners, payments, contact">
+    <meta name="author" content="Website Team">
+    <title>Home - Modern Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- شريط التنقل -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="#">YourService</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Website</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <!-- قسم الترحيب -->
-    <header class="bg-light py-5">
-        <div class="container text-center">
-            <h1 class="display-4">Welcome to YourService</h1>
-            <p class="lead">Your one-stop solution for all service needs</p>
-            <a href="signup.html" class="btn btn-primary btn-lg">Get Started</a>
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1>Welcome to Our Modern Website</h1>
+            <p class="lead">Providing top-notch services for craftsmen and partners.</p>
         </div>
     </header>
-
-    <!-- قسم الميزات -->
-    <section class="py-5 bg-white">
-        <div class="container">
-            <h2 class="text-center mb-4">Our Features</h2>
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <i class="bi bi-speedometer2 display-4 text-primary"></i>
-                    <h4>Fast Service</h4>
-                    <p>Get your requests processed quickly and efficiently.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <i class="bi bi-shield-check display-4 text-primary"></i>
-                    <h4>Secure</h4>
-                    <p>Your data is protected with top-notch security measures.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <i class="bi bi-chat-dots display-4 text-primary"></i>
-                    <h4>24/7 Support</h4>
-                    <p>Our team is here to assist you anytime, anywhere.</p>
-                </div>
+    <main class="container my-5">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h3>Our Services</h3>
+                <p>Explore a wide range of services designed to help you succeed.</p>
+                <a href="services.html" class="btn btn-primary">Learn More</a>
+            </div>
+            <div class="col-md-4">
+                <h3>Meet the Craftsmen</h3>
+                <p>Discover skilled craftsmen ready to bring your ideas to life.</p>
+                <a href="craftsmen.html" class="btn btn-secondary">View Profiles</a>
+            </div>
+            <div class="col-md-4">
+                <h3>Contact Us</h3>
+                <p>Have questions? Get in touch with our team today.</p>
+                <a href="contact.html" class="btn btn-dark">Get in Touch</a>
             </div>
         </div>
-    </section>
-
-    <!-- الفوتر -->
-    <footer class="bg-primary text-white py-4">
-        <div class="container text-center">
-            <p>&copy; 2024 YourService. All rights reserved.</p>
-        </div>
+    </main>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Modern Website. All Rights Reserved.</p>
     </footer>
-
-    <!-- روابط الجافاسكريبت -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
