--- a/login.html
+++ b/login.html
@@ -1,33 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | YourService</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Login Section -->
-    <section class="vh-100 d-flex align-items-center justify-content-center">
-        <div class="container">
-            <div class="card shadow-sm p-4">
-                <h2 class="text-center mb-4">Login</h2>
-                <form id="loginForm" onsubmit="return loginUser()" method="POST">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
-                </form>
+    <div class="container mt-5">
+        <h2>Login</h2>
+        <form id="loginForm" class="mt-3">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" required>
             </div>
-        </div>
-    </section>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" required>
+            </div>
+            
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<div class="g-recaptcha" data-sitekey="your-site-key"></div>
 
-    <script src="script.js"></script>
+<button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+    <script src="login.js"></script>
 </body>
 </html>
