--- a/payment.html
+++ b/payment.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About - Learn more about our services and platform.">
+    <meta name="description" content="Payment - Learn more about our services and platform.">
     <meta name="author" content="Website Team">
-    <title>About</title>
+    <title>Payment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,11 +29,11 @@
     </nav>
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1>About</h1>
+            <h1>Payment</h1>
         </div>
     </header>
     <main class="container my-5">
-        <p>Learn more about our company and values.</p>
+        <p>Make secure payments through our platform.</p>
     </main>
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 Modern Website. All Rights Reserved.</p>
