--- a/signup.html
+++ b/signup.html
@@ -1,47 +1,60 @@
+
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إنشاء حساب</title>
-  <!-- ربط Bootstrap -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Signup - Learn more about our services and platform.">
+    <meta name="author" content="Website Team">
+    <title>Signup</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="bg-primary text-white text-center py-4">
-    <h1>إنشاء حساب جديد</h1>
-  </header>
-  <main class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <form action="signup.php" method="post">
-          <div class="form-group">
-            <label for="name">الاسم الكامل:</label>
-            <input type="text" id="name" name="name" class="form-control" required>
-          </div>
-
-          <div class="form-group">
-            <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" name="email" class="form-control" required>
-          </div>
-
-          <div class="form-group">
-            <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" name="password" class="form-control" required>
-          </div>
-
-          <button type="submit" class="btn btn-primary btn-block">إنشاء حساب</button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Website</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1>Signup</h1>
+        </div>
+    </header>
+    <main class="container my-5">
+        
+        <form>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Choose a username">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Create a password">
+            </div>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
-      </div>
-    </div>
-  </main>
-  <footer class="bg-light text-center py-3">
-    <p>&copy; 2024 مركز الدعم الفني. جميع الحقوق محفوظة.</p>
-  </footer>
-
-  <!-- إضافة jQuery و Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
+    </main>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Modern Website. All Rights Reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
